[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Sprites/Moving Platform/Platform.png" type="Texture" id=1]
[ext_resource path="res://src/objects/MovingPlatformComplex.gd" type="Script" id=2]
[ext_resource path="res://assets/Sprites/Moving Platform/Arrow.png" type="Texture" id=3]
[ext_resource path="res://assets/Sprites/Moving Platform/PlatformInactive.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 72, 2 )

[node name="MovingPlatformComplex" type="KinematicBody2D"]
collision_mask = 6
motion/sync_to_physics = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SpriteInactive" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Arrow" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ActivationArea" type="Area2D" parent="."]

[node name="ActivationCollision" type="CollisionShape2D" parent="ActivationArea"]
position = Vector2( 0, -26 )
shape = SubResource( 2 )
